[package]
name = "video_encoding_system"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "node"
path = "src/bin/node.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tonic = { version = "0.9", features = ["gzip"]}
prost = "0.11"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.3", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.5"
which = "4.4"
config = "0.13"
sha2 = "0.10"
hex = "0.4.3"
futures = "0.3.30"
tracing-appender = "0.2"

[build-dependencies]
tonic-build = "0.9"
